Added tile pps with multiplier (to do "pps=*0.5")

--- a/unity/Assets/StreamingAssets/content/MoM/ck/mom1e-tiles/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/ck/mom1e-tiles/tiles.ini
@@ -65,6 +65,7 @@ reverse=TileSideGraveyard
 name={ffg:TILE_FOYER_MAD01}
 image="{import}/img/Tile_Foyer_MAD01"
 aspect=1.5
+pps=*0.5
 traits=inside big stairs
 reverse=TileSideFrontYard
 
@@ -78,6 +79,7 @@ reverse=TileSideLaboratory
 name={ffg:TILE_FRONT_YARD_MAD01}
 image="img/Tile_Front_Yard_MAD01"
 aspect=1.5
+pps=72
 traits=inside outside big 
 reverse=TileSideFoyer
 
