--- a/unity/Assets/StreamingAssets/content/MoM/soa/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tiles.ini
@@ -3,6 +3,7 @@ name={ffg:TILE_DINER_MAD25}
 image="{import}/img/Tile_Diner_MAD25"
 traits=inside big
 aspect=1.5
+pps=*0.5
 reverse=TileSideExhibitEntrance
 
 [TileSideExhibitEntrance]
@@ -10,6 +11,7 @@ name={ffg:TILE_EXHIBIT_ENTRANCE_MAD25}
 image="{import}/img/Tile_Exhibit_Entrance_MAD25"
 traits=inside big
 aspect=1.5
+pps=*0.5
 reverse=TileSideDiner
 
 [TileSideYard1MAD25]
