--- a/unity/Assets/StreamingAssets/content/MoM/ck/cotw-tiles/tiles.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/ck/cotw-tiles/tiles.ini
@@ -8,6 +8,7 @@ reverse=TileSideHillTop
 name={ffg:TILE_BARN_MAD09}
 image="{import}/img/Tile_Barn_MAD09"
 aspect=1.5
+pps=*0.5
 traits=inside outside big
 reverse=TileSideCoveredBridge
 
@@ -35,6 +36,7 @@ reverse=TileSidePigPen
 name={ffg:TILE_COVERED_BRIDGE_MAD09}
 image="{import}/img/Tile_Covered_Bridge_MAD09"
 aspect=1.5
+pps=*0.5
 traits=inside outside big river
 reverse=TileSideBarn
 
@@ -54,7 +56,7 @@ reverse=TileSideRitualSite
 name={ffg:TILE_OLD_FOREST_MAD09}
 image="{import}/img/Tile_Old_Forest_MAD09"
 aspect=1.5
-pps=146.28571
+pps=*0.5
 traits=outside big
 reverse=TileSideWaterwheel
 
@@ -137,6 +139,6 @@ reverse=TileSidePond
 name={ffg:TILE_WATERWHEEL_MAD09}
 image="{import}/img/Tile_Waterwheel_MAD09"
 aspect=1.5
-pps=146.28571
+pps=*0.5
 traits=inside outside big river
 reverse=TileSideOldForest
