--- a/unity/Assets/StreamingAssets/content/MoM/soa/investigators.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/investigators.ini
@@ -1,20 +1,20 @@
 [HeroFinnEdwards]
 name={ffg:INVESTIGATOR_FINN_EDWARDS}
-image="{import}/img/Circle_Investigator_Finn_Edwards"
+image="{import}/img/Circle_Investigator_Finn_Edwards.dds"
 traits=male
 
 [HeroTommyMuldoon]
 name={ffg:INVESTIGATOR_TOMMY_MULDOON}
-image="{import}/img/Circle_Investigator_Tommy_Muldoon"
+image="{import}/img/Circle_Investigator_Tommy_Muldoon.dds"
 traits=male
 item=ItemUniqueBecky
 
 [HeroMarieLambeau]
 name={ffg:INVESTIGATOR_MARIE_LAMBEAU}
-image="{import}/img/Circle_Investigator_Marie_Lambeau"
+image="{import}/img/Circle_Investigator_Marie_Lambeau.dds"
 traits=female
 
 [HeroDianaStanley]
 name={ffg:INVESTIGATOR_DIANA_STANLEY}
-image="{import}/img/Circle_Investigator_Diana_Stanley"
+image="{import}/img/Circle_Investigator_Diana_Stanley.dds"
 traits=female
