--- a/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/content_pack.ini
@@ -2,7 +2,7 @@
 [ContentPack]
 name={ffg:PRODUCT_TITLE_MAD25}
 description={ffg:PRODUCT_TITLE_MAD25}
-image="{import}/img/MAD25"
+image="{import}/img/MAD25.dds"
 id=SoA
 type=box
 
