--- a/unity/Assets/StreamingAssets/content/MoM/soa/monsters.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/monsters.ini
@@ -1,6 +1,6 @@
 [MonsterSkeleton]
 name={ffg:MONSTER_SKELETON}
-image="{import}/img/Monster_Skeleton"
+image="{import}/img/Monster_Skeleton.dds"
 traits=fleshless
 awareness=2
 horror=4
@@ -10,7 +10,7 @@ healthperhero=1
 
 [MonsterHiredGun]
 name={ffg:MONSTER_HIRED_GUN}
-image="{import}/img/Monster_Hired_Gun"
+image="{import}/img/Monster_Hired_Gun.dds"
 traits=humanoid
 awareness=2
 horror=1
@@ -20,7 +20,7 @@ healthperhero=1
 
 [MonsterLloigor]
 name={ffg:MONSTER_LLOIGOR}
-image="{import}/img/Monster_Lloiger"
+image="{import}/img/Monster_Lloiger.dds"
 traits=beast
 awareness=7
 horror=9
@@ -30,7 +30,7 @@ healthperhero=2
 
 [MonsterStarVampire]
 name={ffg:MONSTER_STAR_VAMPIRE}
-image="{import}/img/Monster_Star_Vampire"
+image="{import}/img/Monster_Star_Vampire.dds"
 traits=beast
 awareness=4
 horror=6
