--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -25,11 +25,293 @@ image="{import}/img/CutsceneFrame"
 [ImageCutsceneTextTopper]
 image="{import}/img/CutsceneTextTopper"
 
+[ImageChurch]
+image="{import}/img/Image_1"
+
+[ImageMurderInvestigation]
+image="{import}/img/Image_1_000002"
+
+[ImageSlime]
+image="{import}/img/Image_1_000003"
+
+[ImageOfficeWithBlood]
+image="{import}/img/Image_1_000004"
+
+[ImageDunwichHorror]
+image="{import}/img/Image_1_000005"
+
+[ImageDarkReflections]
+image="{import}/img/Image_1_000006"
+
+[ImageRitualGoneWrong]
+image="{import}/img/Image_1_000007"
+
+[ImageBuriedAlive]
+image="{import}/img/Image_1_000008"
+
+[ImageArtRoom]
+image="{import}/img/Image_1_000009"
+
+[ImageGoodNowStayDead]
+image="{import}/img/Image_1_000010"
+
+[ImageWounded]
+image="{import}/img/Image_1_000011"
+
+[ImageBloodyKukri]
+image="{import}/img/Image_1_000012"
+
+[ImageHexagramRitual]
+image="{import}/img/Image_1_000013"
+
+[ImageDrHenryArmitage]
+image="{import}/img/Image_1_000014"
+
+[ImageScream]
+image="{import}/img/Image_1_000015"
+
+[ImageOfficeLazy]
+image="{import}/img/Image_1_000016"
+
+[ImageLibary]
+image="{import}/img/Image_1_000017"
+
+[ImageMuseum]
+image="{import}/img/Image_1_000018"
+
+[ImageSpell]
+image="{import}/img/Image_1_000019"
+
+[ImageWorkroom]
+image="{import}/img/Image_1_000020"
+
+[ImageFogWindy]
+image="{import}/img/Image_1_000021"
+
+[ImageMuseumHuntingHorror]
+image="{import}/img/Image_1_000022"
+
+[ImageDeepOnes]
+image="{import}/img/Image_1_000023"
+
+[ImageDocks]
+image="{import}/img/Image_1_000024"
+
+[ImageArmStuck]
+image="{import}/img/Image_1_000025"
+
+[ImageSpellCaster]
+image="{import}/img/Image_1_000026"
+
+[ImageOfficeAsleep]
+image="{import}/img/Image_1_000027"
+
+[ImageVillageDecayed]
+image="{import}/img/Image_1_000028"
+
+[ImageWoodsDogingBullets]
+image="{import}/img/Image_1_000029"
+
+[ImageCoveredBodyWithBlood]
+image="{import}/img/Image_1_000030"
+
+[ImageFogMansion]
+image="{import}/img/Image_1_000031"
+
+[ImageLibaryResearch]
+image="{import}/img/Image_1_000032"
+
+[ImageFightingTentacles]
+image="{import}/img/Image_1_000033"
+
+[ImageMuseumRobber]
+image="{import}/img/Image_1_000034"
+
+[ImageCityMessedUpWithBlood]
+image="{import}/img/Image_1_000035"
+
+[ImageGunThemDown]
+image="{import}/img/Image_1_000036"
+
+[ImageDissectionRoom]
+image="{import}/img/Image_1_000037"
+
+[ImageDocksBuringBoat]
+image="{import}/img/Image_1_000038"
+
+[ImageBookHolder]
+image="{import}/img/Image_1_000040"
+
+[ImageSpellMindtrick]
+image="{import}/img/Image_1_000039"
+
+[ImageSyringe]
+image="{import}/img/Image_1_000041"
+
+[ImageBustedOpen]
+image="{import}/img/Image_1_000042"
+
+[ImageHillStreetPolicePatrol]
+image="{import}/img/Image_1_000043"
+
+[ImageHillStreetPolicePatrol]
+image="{import}/img/Image_1_000043"
+
+[ImageBook]
+image="{import}/img/Image_1_000044"
+
+[ImageNightWatch]
+image="{import}/img/Image_1_000045"
+
+[ImageCarTentacleEscape]
+image="{import}/img/Image_1_000046"
+
+[ImageChurchDecayed]
+image="{import}/img/Image_1_000047"
+
+[ImageMuseumInvitation]
+image="{import}/img/Image_1_000048"
+
+[ImageFogVillage]
+image="{import}/img/Image_1_000049"
+
+[ImageInnsmouthHorror]
+image="{import}/img/Image_1_000050"
+
+[ImageDinnerInvitation]
+image="{import}/img/Image_1_000051"
+
+[ImageStarVampire]
+image="{import}/img/Image_1_000052"
+
 [ImagePortal]
 image="{import}/img/Image_1_SHARED"
 
+[ImageBoatRide]
+image="{import}/img/Image_1_SHARED_000002"
+
 [ImageTome]
 image="{import}/img/Image_2"
+
+[ImageMiskatonicCampus]
+image="{import}/img/Image_2_000002"
+
+[ImageClueFound]
+image="{import}/img/Image_2_000003"
+
+[ImageDarkReflections2]
+image="{import}/img/Image_2_000004"
+
+[ImageMiGoSneakUp]
+image="{import}/img/Image_2_000005"
+
+[ImagePortalSpell]
+image="{import}/img/Image_2_000006"
+
+[ImageOfficeTypewriter]
+image="{import}/img/Image_2_000007"
+
+[ImageRoomVineCovered]
+image="{import}/img/Image_2_000008
+
+[ImageFogCityStreets]
+image="{import}/img/Image_2_000009"
+
+[ImageHandcuffed]
+image="{import}/img/Image_2_000010"
+
+[ImageDarkReflections3]
+image="{import}/img/Image_2_000011"
+
+[ImageOfficeBriefing]
+image="{import}/img/Image_2_000012"
+
+[ImageDinnerParty]
+image="{import}/img/Image_2_000013"
+
+[ImageInnsmouthCity]
+image="{import}/img/Image_2_000014"
+
+[ImageMurderInvestigationBedroom]
+image="{import}/img/Image_2_000015"
+
+[ImagePoliceMan]
+image="{import}/img/Image_2_000016"
+
+[ImageSpellVision]
+image="{import}/img/Image_2_000017"
+
+[ImageFogWoods]
+image="{import}/img/Image_2_000018"
+
+[ImageBurningHouseRuneStone]
+image="{import}/img/Image_2_000019"
+
+[ImageFlashlightScared]
+image="{import}/img/Image_2_000020"
+
+[ImageRitualOnDeadBody]
+image="{import}/img/Image_2_000021"
+
+[ImagePoliceBuilding]
+image="{import}/img/Image_2_000022"
+
+[ImageLabStudy]
+image="{import}/img/Image_2_000023"
+
+[ImageMeeting]
+image="{import}/img/Image_2_000024"
+
+[ImageZombieKill]
+image="{import}/img/Image_2_000025"
+
+[ImageMuseumHall]
+image="{import}/img/Image_2_000026"
+
+[ImageFogWoods2]
+image="{import}/img/Image_2_000027"
+
+[ImageDarkReflections4]
+image="{import}/img/Image_2_000028"
+
+[ImageBackShot]
+image="{import}/img/Image_2_000029"
+
+[ImageMotorcycle]
+image="{import}/img/Image_2_000030"
+
+[ImageBarricadeBreaks]
+image="{import}/img/Image_2_000031"
+
+[ImageDispute]
+image="{import}/img/Image_2_000032"
+
+[ImageGraveyard]
+image="{import}/img/Image_2_000033"
+
+[ImageRitualStone]
+image="{import}/img/Image_2_000034
+
+[ImageSpellMindtrick2]
+image="{import}/img/Image_2_000035"
+
+[ImageAmulet]
+image="{import}/img/Image_2_000036"
+
+[ImageKillItWithFire]
+image="{import}/img/Image_2_000037"
+
+[ImageHandcuffed2]
+image="{import}/img/Image_2_000038"
+
+[ImageFarmDarkYoung]
+image="{import}/img/Image_2_000039"
+
+[ImageMuseumExhibition]
+image="{import}/img/Image_2_000040"
+
+[ImageDeepOne]
+image="{import}/img/Image_2_000041"
 
 [ImageVillage]
 image="{import}/img/Image_2_SHARED"
