--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -313,11 +313,179 @@ image="{import}/img/Image_2_000040"
 [ImageDeepOne]
 image="{import}/img/Image_2_000041"
 
+[ImageZombie]
+image="{import}/img/Image_2_000042"
+
+[ImageSpellLightning]
+image="{import}/img/Image_2_000043"
+
+[ImageRitualPentagramCultists]
+image="{import}/img/Image_2_000044"
+
+[ImageBook2]
+image="{import}/img/Image_2_000045"
+
+[ImageCityAlleyway]
+image="{import}/img/Image_2_000046"
+
+[ImageMuseumBloodTrail]
+image="{import}/img/Image_2_000047"
+
+[ImageWoodsSwathOfDestruction]
+image="{import}/img/Image_2_000048"
+
+[ImageAngryMob]
+image="{import}/img/Image_2_000049"
+
+[ImageDocks2]
+image="{import}/img/Image_2_000050"
+
 [ImageVillage]
 image="{import}/img/Image_2_SHARED"
 
 [ImageDog]
 image="{import}/img/Image_3"
+
+[ImageDeepOne2]
+image="{import}/img/Image_3_000002"
+
+[ImageZombieGirl]
+image="{import}/img/Image_3_000003"
+
+[ImageStrangeSky]
+image="{import}/img/Image_3_000004"
+
+[ImageYogSothoth]
+image="{import}/img/Image_3_000005"
+
+[ImageMuseumArchive]
+image="{import}/img/Image_3_000006"
+
+[ImageTentacleAttack]
+image="{import}/img/Image_3_000007"
+
+[ImageCityAtNight]
+image="{import}/img/Image_3_000008"
+
+[ImageDriveBy]
+image="{import}/img/Image_3_000009"
+
+[ImageLetTheMotherfuckerBurn]
+image="{import}/img/Image_3_000010"
+
+[ImagePlaza]
+image="{import}/img/Image_3_000011"
+
+[ImageCityStreets]
+image="{import}/img/Image_3_000012"
+
+[ImageMuseumBuilding]
+image="{import}/img/Image_3_000013"
+
+[ImageTank]
+image="{import}/img/Image_3_000014"
+
+[ImagePoliceMan2]
+image="{import}/img/Image_3_000015"
+
+[ImageMuseumExhibitionAtNight]
+image="{import}/img/Image_3_000016"
+
+[ImageThisIsYouLastChance]
+image="{import}/img/Image_3_000017"
+
+[ImageDunwichCultists]
+image="{import}/img/Image_3_000018"
+
+[ImageWeirdStorage]
+image="{import}/img/Image_3_000019"
+
+[ImageRitualNeedsBlood]
+image="{import}/img/Image_3_000020"
+
+[ImageInnsmouthStreets]
+image="{import}/img/Image_3_000021"
+
+[ImageLockedAway]
+image="{import}/img/Image_3_000022"
+
+[ImageWeirdStorage2]
+image="{import}/img/Image_3_000023"
+
+[ImagePoliceConfession]
+image="{import}/img/Image_3_000024"
+
+[ImageDocksKiller]
+image="{import}/img/Image_3_000025"
+
+[ImageBadNews]
+image="{import}/img/Image_3_000026"
+
+[ImageMansionAtNight]
+image="{import}/img/Image_3_000027"
+
+[ImageSpellMoon]
+image="{import}/img/Image_3_000028"
+
+[ImageYouAreFinished]
+image="{import}/img/Image_3_000029"
+
+[ImageDissectionMiGo]
+image="{import}/img/Image_3_000030"
+
+[ImageYogSothothPlanet]
+image="{import}/img/Image_3_000031"
+
+[ImageHotelRoom]
+image="{import}/img/Image_3_000032"
+
+[ImageMausoleum]
+image="{import}/img/Image_3_000033"
+
+[ImageSewerInvestigation]
+image="{import}/img/Image_3_000034"
+
+[ImageThrall]
+image="{import}/img/Image_3_000035"
+
+[ImageFogGarden]
+image="{import}/img/Image_3_000036"
+
+[ImageYogSothoth2]
+image="{import}/img/Image_3_000037
+
+[ImageZombiesAtTheWindow]
+image="{import}/img/Image_3_000038"
+
+[ImageTentaclePalms]
+image="{import}/img/Image_3_000039"
+
+[ImageDarkReflections5]
+image="{import}/img/Image_3_000040"
+
+[ImageGraveyard2]
+image="{import}/img/Image_3_000041"
+
+[ImageCarDriver]
+image="{import}/img/Image_3_000042"
+
+[ImagePoliceMythosCreaturesAttack]
+image="{import}/img/Image_3_000043"
+
+[ImageFoundTheKey]
+image="{import}/img/Image_3_000044"
+
+[ImageHotelRoomDark]
+image="{import}/img/Image_4_000002"
+
+[ImageSyringeDoctor]
+image="{import}/img/Image_4_000003"
+
+[ImageAlienClockwork]
+image="{import}/img/Image_4_000004"
+
+[ImageDoorOpening]
+image="{import}/img/Image_4_000005"
 
 [ImageOvergrowth]
 image="{import}/img/Image_3_SHARED"
