Little changes for Italian translation

--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -42,3 +42,4 @@ pck Localization.English.txt
 pck Localization.German.txt
 pck Localization.Polish.txt
 pck Localization.Spanish.txt
+pck Localization.Italian.txt
