#728 Add images, base pack data, ID.

--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -7,6 +7,9 @@ image="{import}/img/2ndEdition"
 [ImageartOldJournal_3x3]
 image="{import}/img/artOldJournal_3x3"
 
+[ImageArtPowder3x3]
+image="{import}/img/ArtPowder3x3"
+
 [ImageartTheUsualSuspects_4x2]
 image="{import}/img/artTheUsualSuspects_4x2"
 
@@ -552,6 +555,15 @@ image="{import}/img/Scenario_WLW"
 
 [ImageScenario_DR]
 image="{import}/img/Scenario_DR"
+
+[ImageScenario_BCD]
+image="{import}/img/Scenario_BCD"
+
+[ImageScenario_BCD2]
+image="{import}/img/Scenario_BCD2"
+
+[ImageScenario_TD]
+image="{import}/img/Scenario_TD"
 
 [ImageSceneryBushLeft]
 image="{import}/img/Scenery_Bush_Left"
