#728 Adding more SoT content.

--- a/unity/Assets/StreamingAssets/content/MoM/sot/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/content_pack.ini
@@ -9,8 +9,8 @@ type=box
 ; Data, all of these files will be read
 ; names are cosmetic, data can be anywhere
 [ContentPackData]
-;tiles.ini
-;investigators.ini
+tiles.ini
+investigators.ini
 ;monsters.ini
-;items.ini
-;tokens.ini
+items.ini
+tokens.ini
