Adding extra mythos.

--- a/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/mythos.ini
@@ -3090,16 +3090,16 @@ button1={ffg:UI_TAP_TO_CONTINUE}
 
 ; rank -1
 [PerilThatsBetter01]
-; Not sure if the ' will break things
-;text={ffg:THAT'S_BETTER_01:{0}:{rnd:hero}}
+text={ffg:THAT'S_BETTER_01:{0}:{rnd:hero}}
+buttons=2
 event1=PerilThatsBetter02
 button1={ffg:COMMON_MYTHOS_EVENT_RESOLVE}
 event2=
 button2={ffg:COMMON_MYTHOS_EVENT_NO_TARGET}
-conditions=$mythosHelp,>,0 $mythosOutdoors,>,0 $mythosUnfinished,>,0
+conditions=$mythosHelp,>,0 $mythosOutdoors,>,0
 
 [PerilThatsBetter02]
-;text={ffg:THAT'S_BETTER_02:{0}:{rnd:hero}}
+text={ffg:THAT'S_BETTER_02:{0}:{rnd:hero}}
 event1=
 button1={ffg:UI_TAP_TO_CONTINUE}
 
