--- a/unity/Assets/StreamingAssets/content/MoM/sot/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/tokens.ini
@@ -1,3 +1,82 @@
+[TokenGrannyOrne]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenArthurJohnson]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenZoraLarson]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenGabrielCarillo]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenMaryAnnChase]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenLewisHayes]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenSachikoHiga]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenEstherLocke]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenHenryWan]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
+
+[TokenTheVeiledKing]
+image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+x=0
+y=0
+height=130
+width=130
 
 [TokenWraith]
 name={ffg:MONSTER_WRAITH}
