--- a/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
@@ -58,12 +58,12 @@ name={ffg:UNIQUE_ITEM_TWILIGHT_DIADEM}
 image={import}/img/UniqueItem_TwilightDiadem
 traits=relic unique
 
-;[ItemSpellBinding]
-;name={ffg:SPELL_BINDING}
-;image={import}/img/Spell_Binding
-;traits=spell
+[ItemSpellBinding]
+name={ffg:SPELL_BINDING}
+image={import}/img/Spell_Binding
+traits=spell spelldefence
 
 ;[ItemSpellSpectralRazor]
 ;name={ffg:SPELL_SPECTRAL_RAZOR}
 ;image={import}/img/Spell_SpectralRazor
-;traits=spell
+;traits=spell spellattack
