Adding Spectral Razor.

--- a/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
@@ -63,7 +63,7 @@ name={ffg:SPELL_BINDING}
 image={import}/img/Spell_Binding
 traits=spell spelldefence
 
-;[ItemSpellSpectralRazor]
-;name={ffg:SPELL_SPECTRAL_RAZOR}
-;image={import}/img/Spell_SpectralRazor
-;traits=spell spellattack
+[ItemSpellSpectralRazor]
+name={ffg:SPELL_SPECTRAL_RAZOR}
+image={import}/img/Spell_SpectralRazor
+traits=spell spellattack
