Fixing MoM Painkllers image.

--- a/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/items.ini
@@ -1,6 +1,6 @@
 [ItemCommonPainkillers]
 name={ffg:COMMON_ITEM_PAINKILLERS}
-image={import}/img/CommonItem_Painkillers
+image={import}/img/CommonItem_Aspirin
 traits=equipment common
 
 [ItemCommonBindingPowder]
