#852 Add and Improve Valkyrie French translations

--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -43,3 +43,4 @@ pck Localization.German.txt
 pck Localization.Polish.txt
 pck Localization.Spanish.txt
 pck Localization.Italian.txt
+pck Localization.French.txt
