#805 Descent Shop item duplicates
- Fix duplicate in shop list
- authorize duplicate for  Leather Armor and the Iron Shield (new field qty can be set in item list to define quantity of items)
- improve background colors of price and Act / class

--- a/unity/Assets/StreamingAssets/content/D2E/base/items.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/items.ini
@@ -93,6 +93,7 @@ traits=armor light_armor act1
 minfame=insignificant
 maxfame=noteworthy
 price=75
+qty=2
 
 [ItemLeatherArmor2]
 name={ffg:ITEM_LEATHER_ARMOR}
@@ -141,6 +142,7 @@ traits=one_handed shield act1
 minfame=insignificant
 maxfame=noteworthy
 price=50
+qty=2
 
 [ItemIronShield2]
 name={ffg:ITEM_IRON_SHIELD_2}
