#620 Add missing heroes translation

--- a/unity/Assets/StreamingAssets/content/D2E/ck/d1e/heroes.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/d1e/heroes.ini
@@ -89,31 +89,31 @@ archetype=warrior
 traits=male
 
 [HeroMadCarthos]
-name="Mad Carthos"
+name={ffg:MAD_CARTHOS}
 image="{import}/img/Hero_MadCarthos"
 archetype=mage
 traits=male
 
 [HeroRedScorpion]
-name="Red Scorpion"
+name={ffg:RED_SCORPION}
 image="{import}/img/Hero_RedScorpion"
 archetype=scout
 traits=female
 
 [HeroVarikasTheDead]
-name="Varikas the Dead"
+name={ffg:VARIKAS_THE_DEAD}
 image="{import}/img/Hero_VarikasTheDead"
 archetype=warrior
 traits=male
 
 [HeroLandrectheWise]
-name="Landrec the Wise"
+name={ffg:LANDREC_THE_WISE}
 image="img/Landrec"
 archetype=mage
 traits=male
 
 [HeroBogranTheShadow]
-name="Bogran the Shadow"
+name={ffg:BOGRAN_THE_SHADOW}
 image="img/BogranTheShadow"
 archetype=scout
 traits=male
