--- a/unity/Assets/StreamingAssets/content/D2E/ck/dq/heroes.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/dq/heroes.ini
@@ -29,7 +29,7 @@ archetype=scout
 traits=female
 
 [HeroHugoTheGlorious]
-name="Hugo the Glorious"
+name={ffg:HUGO_THE_GLORIOUS}
 image="img/HugoTheGlorious"
 archetype=warrior
 traits=male
