--- a/unity/Assets/StreamingAssets/content/D2E/ck/promo/heroes.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/promo/heroes.ini
@@ -17,7 +17,7 @@ archetype=mage
 traits=female
 
 [HeroTobinFarslayer]
-name="Tobin Farslayer"
+name={ffg:TOBIN_FARSLAYER}
 image="img/TobinFarslayer"
 archetype=scout
 traits=male
