--- a/unity/Assets/StreamingAssets/content/D2E/ck/wod/heroes.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/ck/wod/heroes.ini
@@ -29,7 +29,7 @@ archetype=warrior
 traits=male
 
 [HeroBrotherGlyr]
-name="Brother Glyr"
+name={ffg:BROTHER_GLYR}
 image="{import}/img/Hero_BrotherGlyr"
 archetype=healer
 traits=male
