--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 # FFG imported content
 /content/D2E/ffg
 /content/MoM/ffg
+
+# Auto generated files
+/libraries/FFGAppImport/obj
+/libraries/ValkyrieTools/obj
