#656  Crawl file system for apps if the registry fails
- Add StandaloneFileBrowser in the assets (can't add it as an external plugin as it needs the be recompiled for each platform)
- Support path input in FFGappImport module
- Change unityengine.dll import mode, so it's not copied in plugins directory when libraries are compiled
- make the "install D2E/MoM" red text into a button, to allow for manual selection. This should be working only for Windows/Mac/Linux. On android button is not activated

--- a/libraries/FFGAppImport/FFGAppImport.csproj
+++ b/libraries/FFGAppImport/FFGAppImport.csproj
@@ -45,6 +45,7 @@
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
