--- a/libraries/ValkyrieTools/ValkyrieTools.csproj
+++ b/libraries/ValkyrieTools/ValkyrieTools.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\..\..\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
