#950 A little brighter tile(s) display area

--- a/unity/Assets/StreamingAssets/content/MoM/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/images.ini
@@ -621,3 +621,12 @@ image="{import}/img/Tower_6Piece"
 
 [ImageGrotesque]
 image="{import}/img/Unique_Grotesque"
+
+[ImageLowEditorTransparency]
+image="img/LowEditorTransparency"
+
+[ImageMediumEditorTransparency]
+image="img/MediumEditorTransparency"
+
+[ImageHighEditorTransparency]
+image="img/HighEditorTransparency"
