--- a/unity/Assets/StreamingAssets/content/D2E/base/images.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/images.ini
@@ -284,3 +284,12 @@ image="{import}/img/Icon_Wolf"
 
 [ImageLogoFrostgate]
 image="{import}/img/Logo_Frostgate"
+
+[ImageLowEditorTransparency]
+image="img/LowEditorTransparency"
+
+[ImageMediumEditorTransparency]
+image="img/MediumEditorTransparency"
+
+[ImageHighEditorTransparency]
+image="img/HighEditorTransparency"
