#966 #964 Fix token placement on Android and Windows
 - Bring new placement support on Android in tokens.ini
 - Fix Zebulon Whateley token on Windows
 - unload bundle after import to free memory and allow reimport

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -3,6 +3,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1538
 y=130
+x_android=260
+y_android=520
 height=130
 width=130
 
@@ -11,6 +13,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1040
 y=390
+x_android=1300
+y_android=260
 height=130
 width=130
 
@@ -19,6 +23,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=888
 y=0
+x_android=260
+y_android=780
 height=130
 width=130
 
@@ -27,6 +33,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=520
 y=650
+x_android=1040
+y_android=520
 height=130
 width=130
 
@@ -35,22 +43,28 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=390
 y=260
+x_android=888
+y_android=0
 height=130
 width=130
 
 [TokenDarkness]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
-x=6
+x=7
 y=7
+x_android=137
+y_android=7
 height=115
 width=115
 
 [TokenFire]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
-x=136
+x=137
 y=137
+x_android=267
+y_android=137
 height=115
 width=115
 
@@ -116,6 +130,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=238
 y=130
+x_android=0
+y_android=768
 height=130
 width=130
 
@@ -124,6 +140,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1040
 y=260
+x_android=650
+y_android=520
 height=130
 width=130
 
@@ -132,6 +150,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=238
 y=0
+x_android=758
+y_android=0
 height=130
 width=130
 
@@ -140,6 +160,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1278
 y=130
+x_android=1040
+y_android=390
 height=130
 width=130
 
@@ -148,6 +170,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=368
 y=0
+x_android=780
+y_android=780
 height=130
 width=130
 
@@ -156,6 +180,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1148
 y=130
+x_android=1408
+y_android=130
 height=130
 width=130
 
@@ -164,6 +190,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=260
 y=260
+x_android=1430
+y_android=260
 height=130
 width=130
 
@@ -172,6 +200,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1560
 y=260
+x_android=1538
+y_android=130
 height=130
 width=130
 
@@ -180,6 +210,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=0
 y=378
+x_android=390
+y_android=390
 height=130
 width=130
 
@@ -188,6 +220,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=498
 y=130
+x_android=1018
+y_android=130
 height=130
 width=130
 
@@ -196,6 +230,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=130
 y=390
+x_android=1170
+y_android=260
 height=130
 width=130
 
@@ -204,6 +240,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=520
 y=390
+x_android=1040
+y_android=260
 height=130
 width=130
 
@@ -212,6 +250,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=390
 y=520
+x_android=1668
+y_android=0
 height=130
 width=130
 
@@ -220,6 +260,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=780
 y=650
+x_android=910
+y_android=520
 height=130
 width=130
 
@@ -228,6 +270,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=130
 y=520
+x_android=520
+y_android=780
 height=130
 width=130
 
@@ -236,6 +280,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=758
 y=130
+x_android=1668
+y_android=130
 height=130
 width=130
 
@@ -244,6 +290,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=780
 y=390
+x_android=260
+y_android=390
 height=130
 width=130
 
@@ -252,6 +300,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=390
 y=390
+x_android=368
+y_android=130
 height=130
 width=130
 
@@ -260,6 +310,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1170
 y=390
+x_android=130
+y_android=650
 height=130
 width=130
 
@@ -268,6 +320,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=910
 y=650
+x_android=1300
+y_android=390
 height=130
 width=130
 
@@ -276,6 +330,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1798
 y=130
+x_android=628
+y_android=130
 height=130
 width=130
 
@@ -284,6 +340,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1018
 y=130
+x_android=368
+y_android=0
 height=130
 width=130
 
@@ -292,6 +350,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1408
 y=130
+x_android=390
+y_android=260
 height=130
 width=130
 
@@ -300,6 +360,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1798
 y=0
+x_android=238
+y_android=130
 height=130
 width=130
 
@@ -308,6 +370,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1300
 y=390
+x_android=390
+y_android=650
 height=130
 width=130
 
@@ -316,14 +380,18 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=780
 y=520
+x_android=628
+y_android=0
 height=130
 width=130
 
 [TokenZebulonWhateley]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=1278
+x=1408
 y=0
+x_android=130
+y_android=260
 height=130
 width=130
 
@@ -332,6 +400,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=888
 y=130
+x_android=520
+y_android=520
 height=130
 width=130
 
@@ -340,6 +410,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=130
 y=260
+x_android=888
+y_android=130
 height=130
 width=130
 
@@ -348,6 +420,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=520
 y=260
+x_android=390
+y_android=520
 height=130
 width=130
 
@@ -356,6 +430,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=628
 y=130
+x_android=650
+y_android=780
 height=130
 width=130
 
@@ -364,6 +440,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=758
 y=0
+x_android=910
+y_android=390
 height=130
 width=130
 
