--- a/unity/Assets/StreamingAssets/content/MoM/btt/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/btt/tokens.ini
@@ -3,6 +3,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1040
 y=650
+x_android=1148
+y_android=130
 height=130
 width=130
 
@@ -11,6 +13,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1278
 y=0
+x_android=260
+y_android=650
 height=130
 width=130
 
@@ -19,6 +23,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=390
 y=780
+x_android=0
+y_android=508
 height=130
 width=130
 
@@ -27,6 +33,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=130
 y=650
+x_android=238
+y_android=0
 height=130
 width=130
 
@@ -35,6 +43,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=130
 y=780
+x_android=650
+y_android=260
 height=130
 width=130
 
@@ -43,6 +53,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=910
 y=260
+x_android=260
+y_android=260
 height=130
 width=130
 
@@ -51,6 +63,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1170
 y=260
+x_android=758
+y_android=130
 height=130
 width=130
 
