--- a/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/soa/tokens.ini
@@ -3,6 +3,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=520
 y=520
+x_android=780
+y_android=390
 height=130
 width=130
 
@@ -11,6 +13,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=260
 y=780
+x_android=780
+y_android=260
 height=130
 width=130
 
@@ -19,6 +23,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=0
 y=768
+x_android=650
+y_android=390
 height=130
 width=130
 
@@ -27,6 +33,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=650
 y=650
+x_android=910
+y_android=780
 height=130
 width=130
 
@@ -35,6 +43,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=498
 y=0
+x_android=0
+y_android=638
 height=130
 width=130
 
@@ -43,6 +53,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=650
 y=780
+x_android=650
+y_android=650
 height=130
 width=130
 
@@ -51,6 +63,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=368
 y=130
+x_android=910
+y_android=650
 height=130
 width=130
 
@@ -59,6 +73,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=910
 y=520
+x_android=1170
+y_android=390
 height=130
 width=130
 
@@ -67,6 +83,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=0
 y=638
+x_android=498
+y_android=0
 height=130
 width=130
 
@@ -75,6 +93,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=780
 y=780
+x_android=910
+y_android=260
 height=130
 width=130
 
@@ -83,6 +103,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1668
 y=130
+x_android=1408
+y_android=0
 height=130
 width=130
 
@@ -91,6 +113,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1300
 y=260
+x_android=130
+y_android=520
 height=130
 width=130
 
@@ -99,6 +123,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1148
 y=0
+x_android=1798
+y_android=0
 height=130
 width=130
 
@@ -107,6 +133,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=0
 y=508
+x_android=498
+y_android=130
 height=130
 width=130
 
