--- a/unity/Assets/StreamingAssets/content/MoM/sot/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/tokens.ini
@@ -3,6 +3,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=628
 y=0
+x_android=1278
+y_android=0
 height=130
 width=130
 
@@ -11,6 +13,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=650
 y=390
+x_android=780
+y_android=520
 height=130
 width=130
 
@@ -19,6 +23,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=260
 y=390
+x_android=1170
+y_android=520
 height=130
 width=130
 
@@ -27,6 +33,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=390
 y=650
+x_android=1278
+y_android=130
 height=130
 width=130
 
@@ -35,6 +43,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=650
 y=260
+x_android=390
+y_android=780
 height=130
 width=130
 
@@ -43,6 +53,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=650
 y=520
+x_android=780
+y_android=650
 height=130
 width=130
 
@@ -51,6 +63,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=520
 y=780
+x_android=1560
+y_android=260
 height=130
 width=130
 
@@ -59,6 +73,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1018
 y=0
+x_android=520
+y_android=390
 height=130
 width=130
 
@@ -67,6 +83,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=780
 y=260
+x_android=1798
+y_android=130
 height=130
 width=130
 
@@ -75,6 +93,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=260
 y=520
+x_android=1538
+y_android=0
 height=130
 width=130
 
