#966 #964 Fix token placement on Android and Windows
 - Bring new placement support on Android in tokens.ini
 - Fix Zebulon Whateley token on Windows
 - unload bundle after import to free memory and allow reimport

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -3,6 +3,8 @@ image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-f
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1538
 y=130
+x_android=260
+y_android=520
 height=130
 width=130
 
