#868 MoM: Integrate Horrific Journeys
 - update token name, remove unknown tokens / characters

--- a/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/hj/tokens.ini
@@ -1,4 +1,4 @@
-[TokenVioletAsianLady]
+[TokenDotFisher]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=260
@@ -8,7 +8,7 @@ y_android=650
 height=130
 width=130
 
-[TokenGreenSmokingMan]
+[TokenOfficerButler]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=0
@@ -18,7 +18,7 @@ y_android=0
 height=130
 width=130
 
-[TokenBrownBeardedMan]
+[TokenFredCooper]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1430
@@ -28,27 +28,7 @@ y_android=0
 height=130
 width=130
 
-[TokenGreyBeardedManWithCap]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=1538
-y=0
-x_android=520
-y_android=260
-height=130
-width=130
-
-[TokenGreyBeardedManWithCap]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
-x=1538
-y=0
-x_android=520
-y_android=260
-height=130
-width=130
-
-[TokenRedProudAndrogyn]
+[TokenArthurHollowayIII]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=910
@@ -58,7 +38,7 @@ y_android=650
 height=130
 width=130
 
-[TokenBlueCurlyHairWoman]
+[TokenEthelGibbs]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1668
@@ -68,7 +48,7 @@ y_android=378
 height=130
 width=130
 
-[TokenOrangeMetisseWoman]
+[TokenDoctorRoseBarnett]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
 x=1040
@@ -78,7 +58,7 @@ y_android=378
 height=130
 width=130
 
-[TokenPinkPortalRoom]
+[TokenRift]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
 image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
 x=260
@@ -88,12 +68,22 @@ y_android=260
 height=128
 width=128
 
-[TokenCyanPortalForest]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
-x=130
-y=260
-x_android=0
-y_android=0
-height=128
-width=128
+#[TokenUnknownGreyBeardedManWithCap]
+#image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
+#image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+#x=1538
+#y=0
+#x_android=520
+#y_android=260
+#height=130
+#width=130
+
+# [TokenUnknownBlueRiftForest]
+# image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
+# image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt34"
+# x=130
+# y=260
+# x_android=0
+# y_android=0
+# height=128
+# width=128
