Registered expansion translation

--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -41,5 +41,6 @@ tokens_monsters.ini
 pck Localization.English.txt
 pck Localization.German.txt
 pck Localization.Polish.txt
+pck Localization.Russian.txt
 pck Localization.Spanish.txt
 pck Localization.Italian.txt
