Added custom tokens

--- a/unity/Assets/StreamingAssets/content/MoM/btt/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/btt/tokens.ini
@@ -1,70 +1,49 @@
 [TokenBruceDarzi]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1040
 y=650
-x_android=1148
-y_android=130
 height=130
 width=130
 
 [TokenJeanSpencer]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1278
 y=0
-x_android=260
-y_android=650
 height=130
 width=130
 
 [TokenElizabethFairview]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=390
 y=780
-x_android=0
-y_android=508
 height=130
 width=130
 
 [TokenThomasCarvey]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=130
 y=650
-x_android=238
-y_android=0
 height=130
 width=130
 
 [TokenMayNguyen]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=130
 y=780
-x_android=650
-y_android=260
 height=130
 width=130
 
 [TokenTetsuoMori]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=910
 y=260
-x_android=260
-y_android=260
 height=130
 width=130
 
 [TokenLelandWilliams]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1170
 y=260
-x_android=758
-y_android=130
 height=130
 width=130
 
