--- a/unity/Assets/StreamingAssets/content/MoM/sot/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/sot/tokens.ini
@@ -1,100 +1,70 @@
 [TokenGrannyOrne]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=628
 y=0
-x_android=1278
-y_android=0
 height=130
 width=130
 
 [TokenArthurJohnson]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=650
 y=390
-x_android=780
-y_android=520
 height=130
 width=130
 
 [TokenZoraLarson]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=260
 y=390
-x_android=1170
-y_android=520
 height=130
 width=130
 
 [TokenGabrielCarillo]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=390
 y=650
-x_android=1278
-y_android=130
 height=130
 width=130
 
 [TokenMaryAnnChase]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=650
 y=260
-x_android=390
-y_android=780
 height=130
 width=130
 
 [TokenLewisHayes]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=650
 y=520
-x_android=780
-y_android=650
 height=130
 width=130
 
 [TokenSachikoHiga]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=520
 y=780
-x_android=1560
-y_android=260
 height=130
 width=130
 
 [TokenEstherLocke]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=1018
 y=0
-x_android=520
-y_android=390
 height=130
 width=130
 
 [TokenHenryWan]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=780
 y=260
-x_android=1798
-y_android=130
 height=130
 width=130
 
 [TokenTheVeiledKing]
-image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt12"
-image2="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-2048x1024-fmt47"
+image="img/SpriteAtlasTexture-token"
 x=260
 y=520
-x_android=1538
-y_android=0
 height=130
 width=130
 
