tokens added: clue, search, explore, interact, sight, dog

--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -1,37 +1,37 @@
 [TokenSearch]
-image="img/SpriteAtlasTexture-token"
-x=1538
-y=130
-height=130
-width=130
+image="img/search_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenInteract]
-image="img/SpriteAtlasTexture-token"
-x=1040
-y=390
-height=130
-width=130
+image="img/interact_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenExplore]
-image="img/SpriteAtlasTexture-token"
-x=888
+image="img/explore_token"
+x=0
 y=0
-height=130
-width=130
+height=256
+width=256
 
 [TokenSight]
-image="img/SpriteAtlasTexture-token"
-x=520
-y=650
-height=130
-width=130
+image="img/sight_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenClue]
-image="img/SpriteAtlasTexture-token"
-x=390
-y=260
-height=130
-width=130
+image="img/clue_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenDarkness]
 image="{import}/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 1)-1024x512-fmt10"
@@ -222,13 +222,11 @@ height=130
 width=130
 
 [TokenDog]
-image="img/SpriteAtlasTexture-token"
-x=780
-y=390
-x_android=260
-y_android=390
-height=130
-width=130
+image="img/dog_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenCat]
 image="img/SpriteAtlasTexture-token"
