--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -229,11 +229,11 @@ height=256
 width=256
 
 [TokenCat]
-image="img/SpriteAtlasTexture-token"
-x=390
-y=390
-height=130
-width=130
+image="img/cat_token"
+x=0
+y=0
+height=256
+width=256
 
 [TokenRichardBechman]
 image="img/SpriteAtlasTexture-token"
