--- a/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/tokens.ini
@@ -102,9 +102,9 @@ image="img/walloutsidegreen"
 pps=100
 
 [TokenInvestigators]
-image="img/SpriteAtlasTexture-token"
+image="img/investigators_token"
 x=0
-y=1
+y=0
 height=248
 width=238
 pps=130
